#
#   Reference
#       https://packaging.python.org/tutorials/packaging-projects/
#
#   Operations
#       * Install
#           pip install <path to this package> --use-feature=in-tree-build
#           (the option is needed until pip 21.3)
#       * Upgrade
#           pip install <path to this package> --upgrade
#           Ex: pip install ./lang --upgrade
#
#   Use
#       from project_euler.proj_euler import get_combinatorics_start
#       Because lang/src/project_euler/proj_euler.py

[metadata]
name = project-euler-landron
version = 0.0.6
author = Liviu Andron
author_email = my.name.work at gmail.com
description = Project Euler helper library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/landron/Project-Euler/tree/master/Python/lang
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src